Record Phase 0a (JDK 17) progress in the LLM suggestions plan
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>